<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/default_profile" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/profileDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:text="@string/nickname_default"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/status_default"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDisplayName" />

        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="85dp"
            android:background="@drawable/symbol_button"
            android:text="@string/profile_subscribe_button"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inviteToGroupButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="85dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/symbol_primary_button"
            android:drawableStart="@drawable/ic_invite"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toEndOf="@+id/subscribeButton" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>